default/objects/LongForm_Offer__c/LongForm_Offer__c.object-meta.xml
<CustomObject>
    <label>LongForm Offer</label>
    <nameField>
        <displayFormat>LFOFR-{00000}</displayFormat>
        <label>LongForm Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LongForm Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>