default/objects/LongForm_Offer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belgium-NL</fullName>
            </value>
            <value>
                <fullName>Belgium-FR</fullName>
            </value>
            <value>
                <fullName>Switzerland-DE</fullName>
            </value>
            <value>
                <fullName>Switzerland-FR</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>