default/objects/LongForm_Offer__c/fields/LongForm_Element__c.field-meta.xml
<CustomField>
    <fullName>LongForm_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LongForm Element</label>
    <referenceTo>LongForm_Element__c</referenceTo>
    <relationshipLabel>LongForm Offers</relationshipLabel>
    <relationshipName>LongForm_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>