default/objects/LongForm_Offer__c/fields/LongForm_Element_Mobile__c.field-meta.xml
<CustomField>
    <fullName>LongForm_Element_Mobile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LongForm Element Mobile</label>
    <referenceTo>LongForm_Element__c</referenceTo>
    <relationshipLabel>LongForm Offers (LongForm Element Mobile)</relationshipLabel>
    <relationshipName>LongForm_Offers_Mobile</relationshipName>
    <type>Lookup</type>
</CustomField>