default/objects/LongForm_Offer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Typ B</fullName>
            </value>
            <value>
                <fullName>Inbound Typ C</fullName>
            </value>
            <value>
                <fullName>HOME 1</fullName>
            </value>
            <value>
                <fullName>Home Station offer (v.1)</fullName>
            </value>
            <value>
                <fullName>Shell Promo 2019</fullName>
            </value>
            <value>
                <fullName>Shell Summer 2019</fullName>
            </value>
            <value>
                <fullName>Swiss Pro 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>